[project]
name = "structural_robustness"
version = "1.0.0"
description = "A modular Python library for analyzing structural robustness of networks using entropy, entanglement, and centrality-based dismantling."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "networkx>=2.8",
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "scikit-learn>=1.0",
    "progressbar2>=4.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
